updating projects + skills + fixing about me align bug

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -21,6 +21,6 @@
     }
 
     .aboutMeParagraph {
-        text-align: justify;
+        text-align: left;
     }
 }
