--- a/src/app/proj-card/proj-card.component.scss
+++ b/src/app/proj-card/proj-card.component.scss
@@ -58,7 +58,7 @@
 }
 
 .project-description {
-    padding: 0 10px;
+    padding: 5px 10px;
     font-size: 14px;
     margin-top: -35px;
 }
